course_contents/practice_labs/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh", "-c", "printenv"]
    env:
    - name: api_url
      valueFrom:
        configMapKeyRef:
          name: url
          key: api_url
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
