course_contents/practice_labs/octopus-template.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: octopus-template
  annotations:
    description: "A template for deploying a scalable Nginx application"
  labels:
    app: octopus-app
    tier: frontend
    environment: production
objects:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: octopus-app
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: octopus-app
    template:
      metadata:
        labels:
          app: octopus-app
      spec:
        containers:
        - name: octopus-app
          image: bitnami/nginx
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
- apiVersion: v1
  kind: Service
  metadata:
    name: octopus-service
  spec:
    selector:
      app: octopus-app
    ports:
    - port: 80
      targetPort: 8080
