course_contents/practice_labs/plum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plum-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: plum-app
  template:
    metadata:
      labels:
        app: plum-app
    spec:
      containers:
      - name: nginx
        image: bitnami/nginx
